--- a/vignettes/forestExample-vignette.Rmd
+++ b/vignettes/forestExample-vignette.Rmd
@@ -9,11 +9,20 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
+
 This Vignette explains how to use the FREM package to create a Forest plot based on a FREM run with associated uncertainty. 
 The uncertainty may be a covariance step from NONMEM (a `.cov` file), a sir/bootstrap run from PsN (`raw_results` file) or just a data frame of parameter vectors 
 based on some other method of deriving uncertainty. 
 
-The creation of the plot is divded into the following steps:
+The creation of the plot is divided into the following steps:
 
 * Pre-requisite setup
 * Creation of forest data based on pre-requisite data
@@ -24,52 +33,54 @@ The creation of the plot is divded into the following steps:
 Load the package and identify which NONMEM FREM run that is going to be used for the forest plot.
 
 ```{r echo=TRUE, warning=FALSE,message=FALSE}
-library(FREMfunctions) # Read in the FREMfunctions package
+
+
+library(PMXFrem) # Read in the FREMfunctions package
+
+library(PMXForest) #Read in the forest package for showing the covariate effects
+
+library(ggplot2) #Read in the ggplot2 package for plotting
+
+set.seed(865765) #Set seed for reproducability
+
+
 ```
 
-```{r}
-runDir <- "../inst/extdata/"            # The directory where the FREM model is located
-runno  <- "run7"                        # The FREM model used to produce the forest plot
-
-extFile <- paste0(runDir,runno,".ext") # The full path to the ext file
-modFile <- paste0(runDir,runno,".mod") # The full path to the mod file
-covFile <- paste0(runDir,runno,".cov") # The full path to the cov file
+```{r} 
+#Get the Vingette paths to ext, cov and mod file
+runno<-"run7"
+extFile <- system.file("extdata", paste0(runno,".ext"), package = "PMXFrem")
+modFile <- system.file("extdata", paste0(runno,".mod"), package = "PMXFrem")
+covFile <- system.file("extdata", paste0(runno,".cov"), package = "PMXFrem")
 ```
 
-```{r, echo=FALSE} 
-#Internal code for Vingette paths
-extFile <- system.file("extdata", paste0(runno,".ext"), package = "FREMfunctions")
-modFile <- system.file("extdata", paste0(runno,".mod"), package = "FREMfunctions")
-covFile <- system.file("extdata", paste0(runno,".cov"), package = "FREMfunctions")
-```
-
-Get the parameter estimates and the covaraite names from the FREM model.
+Get the parameter estimates and the covariate names from the FREM model.
 
 ```{r} 
 
-dfExt    <- subset(getExt(extFile = extFile),ITERATION=="-1000000000") # Get the final parameter estimates
-covNames <- getCovNames(modFile = modFile)                             # Get the covariate names from the annotated FREM model file
+dfExt    <- subset(PMXFrem::getExt(extFile = extFile),ITERATION=="-1000000000") # Get the final parameter estimates
+covNames <- PMXFrem::getCovNames(modFile = modFile)                             # Get the covariate names from the annotated FREM model file
 
 ```
 
-Setup a data frame with covariates values that should be used in the forest plot, both multivariate and univariate combinations can be used. Univariate is indicated by only assigning ine covariate value 
-in a row in the data frame. Multivariate is when more then one covariate value is set. A forest-box (y-axis element) of the forest plot will be created for each row in the `dfCovs` dataset. `-99` or `NA` is 
-used to indicate that a covariate should not be used.
+Setup a data frame with covariates values that should be used in the forest plot, both multivariate and univariate combinations can be used. Univariate is indicated by only assigning one covariate value 
+in a row in the data frame. Multivariate is when more then one covariate value is set. A forest-box (y-axis element) of the forest plot will be created for each row in the `dfCovs` dataset. `-99` or `NA` is used to indicate that a covariate should not be used.
 
 ```{r} 
 
-dfCovs<-data.frame(LBWT  = c(3.12,4.6,4.3,-99,-99,-99,-99,-99,-99),
-                   LBLBW = c(3.3,-99,-99,-99,-99,3.3,3.8,-99,-99),
-                   LBBSA = c(-99,-99,-99,0.79,0.91,-99,-99,0.45,-99))
+dfCovs<-data.frame(LBWT  = c(3.12,4.6,4.3,-99,-99,-99,-99,-99),
+                   LBLBW = c(3.3,-99,-99,-99,-99,3.3,3.8,-99),
+                   LBBSA = c(-99,-99,-99,0.56,0.75,-99,-99,-99))
 
 print(dfCovs)
 
 # There is also a utility function to accomplish the same if the setup is more complicated.
-dfCovs <- dfCreateInputForestData(
+dfCovs <- PMXForest::createInputForestData(
   list(
-    list("LBWT" = c(3.12,4.6,4.3),"LBLBW"=c(3.3)),
-    "LBBSA" = c(0.56,0.75),
-    "LBLBW" = c(3.3,3.8)),
+    list("LBWT" = c(3.12,4.6,4.3),"LBLBW"=c(3.3)), #First 3 rows
+    "LBBSA" = c(0.56,0.75),                        #Row 4,5
+    "LBLBW" = c(3.3,3.8),                          #Row 6,7   
+    list("LBWT"=NA,"LBBSA"=NA,"LBLBW"=NA)),        #Last row, reference row
   iMiss=-99)
 
 print(dfCovs)
@@ -80,21 +91,17 @@ After reading in the covariance matrix, multivariate samples will be drawn from 
 
 
 ```{r}
-## Read in the covariance matrix if available
-if (file.exists(covFile)) {  
-  dfcov <- read.table(covFile,fill=TRUE,header=TRUE,sep="",skip=1,stringsAsFactors=FALSE)
-  sigma <- data.matrix(dfcov[,2:ncol(dfcov)])
-}
+#Get 100 samples from the cov file
+dfParameters<-PMXForest::getSamples(covFile,extFile = extFile,n = 100)
 
-mu           <- as.numeric(dfExt[,-(c(1,ncol(dfExt)))])                               # The mean is the final estimates
-dfParameters <- as.data.frame(mvrnorm_vector(mu=mu,sigma = sigma,iSampleIndex = 100)) # Draw 100 samples from cov matrix
-dfParameters <- cbind(dfParameters,OBJ=0)                                             # Add a dummy column with the OBJ to make it look more like a ext file
-
+## Set the first sample to the final estimates
+dfParameters[1,]<-dfExt[1,-1]
 ```
 
-As a last step of the pre-requisite we need to create a list of functions that will be used to calculate the parameter that the forest plot will visualise. 
-This list of functions use only the fixed effects, i.e. no random effects are needed. 
-Also note that the functional form for the covariate-parameter relationships are dependet on the parameter functional form, 
+As a last step of the pre-requisite we need to create a list of functions that will be used to calculate the parameter(s) that the forest plot will visualize. 
+This functions specified in the list of functions only access the fixed effects, i.e. no random effects are needed. 
+
+Also note that the functional form for the covariate-parameter relationships are dependent on the parameter functional form, 
 usually lognormal $CL=\theta_{CL} \cdot exp(\eta_{CL})$, as well as the covariate form in the FREM model, usually normal $COV=\theta_{COV}+\eta_{COV}$. 
 The example below assumes lognormal parameters with normal FREM covariate relationships.
 
@@ -113,30 +120,33 @@ functionListName <- c("CL","V1")
 
 The data for the forest plot can now be generated based on the pre-requisite information.
 ```{r, warning=FALSE}
-dfres <- getForestDF(dfCovs = dfCovs,
-                     noBaseThetas = 6,noCovThetas = length(covNames$covNames),noSigmas = 2,
+dfres <- PMXForest::getForestDFFREM(dfCovs = dfCovs,
+                     noBaseThetas = 6,
+                     noCovThetas = length(covNames$covNames),
+                     noSigmas = 2,
                      dfParameters=dfParameters,covNames=covNames,
                      functionList=functionList,functionListName=functionListName,
-                     quiet=TRUE,withingroupdist = 0.3,cores=1)
+                     quiet=TRUE)
 
 print(dfres)
 ```
 
-Each row in the output corresponds to an errorbar in the forest plot. Grouping of the covariates are automatically detected based on `dfCovs` and visible in the `GROUP` column. 
-`REFMEDIAN`, `REFMEAN` and `REFTRUE` are all based on the reference set of covariates (no covariates per default) and based on the median, mean and final parameter estimate. 
+Each row in the output corresponds to an error bar in the forest plot. Grouping of the covariates are automatically detected based on `dfCovs` and visible in the `GROUP` column. 
+`REFFUNC` and `REFTRUE` are all based on the reference set of covariates (no covariates per default) and per default based on the median and then final parameter estimate (assuming dfParameters first row is the final estimates). 
 A default row-name is created and available in the `COVNAME` column and based on the information in `dfCovs`.
-The columns `q1` and `q3` are per default the 95\% confidence interval for the covariate values and  `q2` is the median value (per default).  
-`Y` is mainly used in the plot function but could be alterd to change the apperance of the forest plot. The `dfCovs` information is also included for each row.
+The columns `q1` and `q2` are per default the 95\% confidence interval for the covariate values and  `FUNC` is the median value (per default). A version of `q1`, `q2` and  `FUNC` without assuming variability in the reference is also available in the `...NOVAR` columns. 
+`COVEFF` is a column that automatically tries to detect if the covariate combination has any effect compared to the reference and can be used to e.g. subset the forest data before plotting the forest plot.
+The `dfCovs` information is also included for each row.
 
 
 ## Create the Forest plot
 
-The `plotForestDF` funciton takes the `getForestDF()` output to produce the Forest plot.
+The `plotForestDF` function takes the `getForestDFFREM()` output to produce the Forest plot.
 
 
 ```{r, fig1,fig.height = 4, fig.width = 16, fig.align="center", out.width=700, out.height=175}
-theme_set(theme_bw(base_size=22)) #Change ggplot defaults to get nice plot
-plotForestDF(dfres,textsize=6)
+theme_set(theme_bw(base_size=16)) #Change ggplot defaults to get nice plot
+PMXForest::plotForestDF(dfres,textsize=5)+xlim(c(0,2.5))
 ```
 
 
