--- a/vignettes/forestExample-vignette.Rmd
+++ b/vignettes/forestExample-vignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Create a FREM forest plot"
+title: "Create a Forest plot for a FREM model"
 author: "Joakim Nyberg"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Create a Forest plot for a FREM model}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-
+## Introduction
 This Vignette explains how to use the FREM package to create a Forest plot based on a FREM run with associated uncertainty. 
 The uncertainty may be a covariance step from NONMEM (a `.cov` file), a sir/bootstrap run from PsN (`raw_results` file) or just a data frame of parameter vectors 
 based on some other method of deriving uncertainty. 
@@ -33,33 +33,34 @@ The creation of the plot is divided into the following steps:
 Load the package and identify which NONMEM FREM run that is going to be used for the forest plot.
 
 ```{r echo=TRUE, warning=FALSE,message=FALSE}
-
-
-library(PMXFrem) # Read in the FREMfunctions package
-
-library(PMXForest) #Read in the forest package for showing the covariate effects
-
-library(ggplot2) #Read in the ggplot2 package for plotting
+suppressPackageStartupMessages(library(PMXFrem)) # Read in the FREMfunctions package
+suppressPackageStartupMessages(library(PMXForest)) #Read in the forest package for showing the covariate effects
+suppressPackageStartupMessages(library(ggplot2)) #Read in the ggplot2 package for plotting
 
 set.seed(865765) #Set seed for reproducability
 
+theme_set(theme_bw(base_size=20)) #Change ggplot defaults to get nice plot
 
 ```
 
+Collect the file names related to the FREM run we are visualizing the results from. The utility function `getFileNames` returns a lis of file paths for the `.mod`, `.ext`, `.lst`, `.phi` and `.cov` files.
 ```{r} 
-#Get the Vingette paths to ext, cov and mod file
-runno <-"run31"
-extFile <- system.file("extdata/SimNeb", paste0(runno,".ext"), package = "PMXFrem")
-modFile <- system.file("extdata/SimNeb", paste0(runno,".mod"), package = "PMXFrem")
-covFile <- system.file("extdata/SimNeb", paste0(runno,".cov"), package = "PMXFrem")
+## Specify the name of the FREM run
+runname <- "run31"
+
+## Collect the file names for the run
+fremFiles <- PMXFrem::getFileNames(modName = runname,modDevDir = system.file("extdata/SimNeb", package = "PMXFrem"))
+
 ```
 
 Get the parameter estimates and the covariate names from the FREM model.
 
 ```{r} 
+## Get the final parameter estimates
+dfExt    <- subset(PMXFrem::getExt(extFile = fremFiles$ext),ITERATION=="-1000000000") 
 
-dfExt    <- subset(PMXFrem::getExt(extFile = extFile),ITERATION=="-1000000000") # Get the final parameter estimates
-covNames <- PMXFrem::getCovNames(modFile = modFile)                             # Get the covariate names from the annotated FREM model file
+## Get the covariate names from the annotated FREM model file
+covNames <- PMXFrem::getCovNames(modFile = fremFiles$mod)                             
 
 ```
 
@@ -67,20 +68,26 @@ Setup a data frame with covariates values that should be used in the forest plot
 in a row in the data frame. Multivariate is when more then one covariate value is set. A forest-box (y-axis element) of the forest plot will be created for each row in the `dfCovs` dataset. `-99` or `NA` is used to indicate that a covariate should not be used.
 
 ```{r} 
-
-dfCovs<-data.frame(LBWT  = c(3.12,4.6,4.3,-99,-99,-99,-99,-99),
-                   LBLBW = c(3.3,-99,-99,-99,-99,3.3,3.8,-99),
-                   LBBSA = c(-99,-99,-99,0.56,0.75,-99,-99,-99))
+dfCovs <- data.frame(LBWT  = c(3.12,4.6,4.3,-99,-99,-99,-99,-99),
+                     LBLBW = c(3.3,-99,-99,-99,-99,3.3,3.8,-99),
+                     LBBSA = c(-99,-99,-99,0.56,0.75,-99,-99,-99))
 
 print(dfCovs)
 
 # There is also a utility function to accomplish the same if the setup is more complicated.
 dfCovs <- PMXForest::createInputForestData(
   list(
-    list("LBWT" = c(3.12,4.6,4.3),"LBLBW"=c(3.3)), #First 3 rows
-    "LBBSA" = c(0.56,0.75),                        #Row 4,5
-    "LBLBW" = c(3.3,3.8),                          #Row 6,7   
-    list("LBWT"=NA,"LBBSA"=NA,"LBLBW"=NA)),        #Last row, reference row
+    list(                       #First 3 rows
+      "LBWT"  = c(3.12,4.6,4.3),
+      "LBLBW" = c(3.3)
+    ),                  
+    "LBBSA" = c(0.56,0.75),     # Row 4,5
+    "LBLBW" = c(3.3,3.8),       # Row 6,7   
+    list(                       # Last row, reference row
+      "LBWT"  = NA,
+      "LBBSA" = NA,
+      "LBLBW" = NA)
+    ),        
   iMiss=-99)
 
 print(dfCovs)
@@ -92,10 +99,10 @@ After reading in the covariance matrix, multivariate samples will be drawn from 
 
 ```{r}
 #Get 100 samples from the cov file
-dfParameters<-PMXForest::getSamples(covFile,extFile = extFile,n = 100)
+dfParameters <- PMXForest::getSamples(fremFiles$cov,extFile = fremFiles$ext,n = 100)
 
 ## Set the first sample to the final estimates
-dfParameters[1,]<-dfExt[1,-1]
+dfParameters[1,] < -dfExt[1,-1]
 ```
 
 As a last step of the pre-requisite we need to create a list of functions that will be used to calculate the parameter(s) that the forest plot will visualize. 
@@ -146,7 +153,7 @@ The `plotForestDF` function takes the `getForestDFFREM()` output to produce the 
 
 
 ```{r, fig1,fig.height = 4, fig.width = 16, fig.align="center", out.width=700, out.height=175}
-theme_set(theme_bw(base_size=16)) #Change ggplot defaults to get nice plot
+
 # PMXForest::plotForestDF(dfres,textsize=5)+xlim(c(0,2.5))
 PMXForest::forestPlot(dfres)#+xlim(c(0,2.5))
 ```
