--- a/vignettes/forestExample-vignette.Rmd
+++ b/vignettes/forestExample-vignette.Rmd
@@ -64,18 +64,23 @@ covNames <- PMXFrem::getCovNames(modFile = fremFiles$mod)
 
 ```
 
-Setup a data frame with covariates values that should be used in the forest plot, both multivariate and univariate combinations can be used. Univariate is indicated by only assigning one covariate value 
-in a row in the data frame. Multivariate is when more then one covariate value is set. A forest-box (y-axis element) of the forest plot will be created for each row in the `dfCovs` dataset. `-99` or `NA` is used to indicate that a covariate should not be used.
+Setup a data frame with covariates values that should be used in the Forest plot, both multivariable and univariable combinations can be used. Univariable is indicated by only assigning one covariate value in a row in the data frame. Multivariable is when more then one covariate value is set. An entry on the y-axis in the Forest plot will be created for each row in the `dfCovs` dataset. `-99` or `NA` is used to indicate that a covariate should not be used.
+
+There are three ways the data frame with the covariate information can be created. It can be done manually:
 
 ```{r} 
-dfCovs <- data.frame(LBWT  = c(3.12,4.6,4.3,-99,-99,-99,-99,-99),
-                     LBLBW = c(3.3,-99,-99,-99,-99,3.3,3.8,-99),
-                     LBBSA = c(-99,-99,-99,0.56,0.75,-99,-99,-99))
+dfCovs <- data.frame(WT   = c(56,56,126.1,-99,-99,-99,-99,-99),
+                     LBWT = c(42.1,-99,-99,-99,-99,42.1,72.7,-99),
+                     BSA  = c(-99,-99,-99,1.58,2.37,-99,-99,-99))
 
 print(dfCovs)
+```
 
-# There is also a utility function to accomplish the same if the setup is more complicated.
-dfCovs <- PMXForest::createInputForestData(
+There is also a utility function to accomplish the same if the setup is more complicated.
+
+```{r}
+
+dfCovs2 <- PMXForest::createInputForestData(
   list(
     list(                       #First 3 rows
       "LBWT"  = c(3.12,4.6,4.3),
@@ -90,19 +95,31 @@ dfCovs <- PMXForest::createInputForestData(
     ),        
   iMiss=-99)
 
-print(dfCovs)
+print(dfCovs2)
 ```
 
-In this example the forest plot will be based on the covariance matrix from the NONMEM `.cov` file. 
+There is also a function called `getCovStats` that takes the data set and a list of covariates and computes input that is suitable for `createInputForestData` assuming only univariable combinations. This is most useful during exploratory stages. Use one of the above methods for more fine-grained control.
+
+```{r}
+data <- fread(system.file("extdata/SimNeb/DAT-2-MI-PMX-2-onlyTYPE2-new.csv",package="PMXFrem"))
+dfCovs3 <- PMXForest::createInputForestData(
+    getCovStats(data,covNames$orgCovNames,probs=c(0.05,0.9),missVal=-99),
+    iMiss    =-99
+  )
+
+print(dfCovs3)
+```
+
+In this example the Forest plot will be based on the covariance matrix from the NONMEM `.cov` file. 
 After reading in the covariance matrix, multivariate samples will be drawn from the a multivariate normal with the means taken as the final parameter estimates and the covariance matrix taken as the uncertainty matrix (from `.cov`) from NONMEM
 
 
 ```{r}
 #Get 100 samples from the cov file
-dfParameters <- PMXForest::getSamples(fremFiles$cov,extFile = fremFiles$ext,n = 100)
+dfParameters <- PMXForest::getSamples(fremFiles$cov,extFile = fremFiles$ext,n = 175)
 
 ## Set the first sample to the final estimates
-dfParameters[1,] < -dfExt[1,-1]
+dfParameters[1,] <- dfExt[1,-1]
 ```
 
 As a last step of the pre-requisite we need to create a list of functions that will be used to calculate the parameter(s) that the forest plot will visualize. 
@@ -139,12 +156,14 @@ dfres <- PMXForest::getForestDFFREM(dfCovs           = dfCovs,
 print(dfres)
 ```
 
-Each row in the output corresponds to an error bar in the forest plot. Grouping of the covariates are automatically detected based on `dfCovs` and visible in the `GROUP` column. 
-`REFFUNC` and `REFTRUE` are all based on the reference set of covariates (no covariates per default) and per default based on the median and then final parameter estimate (assuming dfParameters first row is the final estimates). 
-A default row-name is created and available in the `COVNAME` column and based on the information in `dfCovs`.
-The columns `q1` and `q2` are per default the 95\% confidence interval for the covariate values and  `FUNC` is the median value (per default). A version of `q1`, `q2` and  `FUNC` without assuming variability in the reference is also available in the `...NOVAR` columns. 
-`COVEFF` is a column that automatically tries to detect if the covariate combination has any effect compared to the reference and can be used to e.g. subset the forest data before plotting the forest plot.
-The `dfCovs` information is also included for each row.
+* Each row in the output corresponds to an error bar in the Forest plot. 
+* Grouping of the covariates are automatically detected based on `dfCovs` and visible in the `GROUP` column. 
+`REFFUNC` and `REFTRUE` are all based on the reference set of covariates (no covariates per default) and per default based on the median and then final parameter estimate (assuming `dfParameters` first row is the final estimates). 
+* A default row-name is created and available in the `COVNAME` column and based on the information in `dfCovs`. 
+* The columns `q1` and `q2` are per default the 90\% confidence interval for the covariate values and  `FUNC` is the median value (per default). 
+* A version of `q1`, `q2` and  `FUNC` without assuming variability in the reference is also available in the `...NOVAR` columns. 
+* `COVEFF` is a column that automatically tries to detect if the covariate combination has any effect compared to the reference and can be used to e.g. subset the forest data before plotting the forest plot. 
+* The `dfCovs` information is also included for each row.
 
 
 ## Create the Forest plot
@@ -152,11 +171,55 @@ The `dfCovs` information is also included for each row.
 The `plotForestDF` function takes the `getForestDFFREM()` output to produce the Forest plot.
 
 
-```{r, fig1,fig.height = 4, fig.width = 16, fig.align="center", out.width=700, out.height=175}
-
-# PMXForest::plotForestDF(dfres,textsize=5)+xlim(c(0,2.5))
-PMXForest::forestPlot(dfres)#+xlim(c(0,2.5))
+```{r, fig1,fig.height = 10, fig.width = 14, fig.align="center"}
+PMXForest::forestPlot(dfres,groupNameLabels = c("WT & LBWT","WT","BSA","LBWT","Reference"))
 ```
 
 
+```{r, warning=FALSE}
+dfres3 <- PMXForest::getForestDFFREM(dfCovs           = dfCovs3,
+                                    numNonFREMThetas = 7,
+                                    numSkipOm        = 2,
+                                    dfParameters     = dfParameters,
+                                    covNames         = covNames,
+                                    functionList     = functionList,
+                                    functionListName = functionListName,
+                                    quiet            = TRUE)
+
+
+print(dfres3)
+```
+
+```{r, fig1,fig.height = 10, fig.width = 14, fig.align="center"}
+PMXForest::forestPlot(dfres3)
+```
+
+`getCovStats` is meant as a quick and easy way to get a Forest plot made. It is possible to tidy up the `dfres` to get a more respectable looking Forest plot.
+
+```{r}
+covnames  <- c("20 y","60 y",
+               "12 IU","49 IU",
+               "14 IU", "38 IU",
+               "5 mg/dL","14 mg/dL",
+               "21 kg/m2","37 kg/m2",
+               "1.6 m2","2.3 m2",
+               "72 mL/min","150 mL/min",
+               "Caucasian","Hispanic",
+               "PM","EM",
+               "154 cm","180 cm",
+               "42 kg","69 kg",
+               "NCI=0","NCI=1","NCI=2",
+               "White","Black","Other",
+               "Male","Female",
+               "Non-smoking","Smoking",
+               "WT 58 kg","WT 106 kg")
+
+## Need to make covname a factor with the correct order. This is done automatically by getForestDFFREM if covnames is provided as an argument.
+dfres4 <- dfres3 %>% mutate(COVNAME = factor(rep(covnames,each=length(unique(PARAMETER))),levels=covnames))
+
+covariates <- c("Age","ALT","AST","Total\nbilirubin","Body mas\nindex","Body surface\narea","Createnine\nclearance","Ethnicity","Genotype","Height","Lean body weight", "NCI","Race","Sex","Smoking\nstatus","Weight")
+
+PMXForest::forestPlot(dfres4,groupNameLabels = covariates)
+
+```
 
